[package]
name = "tust-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Runtime support for tust test framework"

[dependencies]
colored.workspace = true
similar.workspace = true

[features]
default = []
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

[dependencies.tokio]
version = "1.0"
optional = true
features = ["rt", "time"]

[dependencies.async-std]
version = "1.0"
optional = true
